error_analisisCalificaion.txt
./Tarea_3/AnalisisCalificacion.java:6: error: cannot find symbol
    private final List<Calificacion> calificaciones = new ArrayList<>();
                       ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:8: error: cannot find symbol
    public void agregar(Calificacion c){
                        ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:21: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:31: error: cannot find symbol
        Calificacion mejor = calificaciones.get(0);
        ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:32: error: cannot find symbol
        for (Calificacion c : calificaciones) {
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:43: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:54: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:67: error: cannot find symbol
        for (Calificacion c : calificaciones) {
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
./Tarea_3/AnalisisCalificacion.java:76: error: cannot find symbol
        for (Calificacion c : calificaciones){
             ^
  symbol:   class Calificacion
  location: class AnalisisCalificacion
9 errors
